--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "react-spring": "^8.0.27",
     "typescript": "3.6.3"
   },
   "scripts": {
